--- a/modules/openapi-generator/src/main/resources/JavaJaxRS/spec/libraries/quarkus/api.mustache
+++ b/modules/openapi-generator/src/main/resources/JavaJaxRS/spec/libraries/quarkus/api.mustache
@@ -47,28 +47,44 @@ import {{javaxPackage}}.validation.Valid;{{/useBeanValidation}}
 @SecuritySchemes(value = {
     {{#authMethods}}{{#isOAuth}}@SecurityScheme(securitySchemeName = "{{name}}", type = SecuritySchemeType.OAUTH2,
          description = "{{description}}",{{#isImplicit}}
-         flows = @OAuthFlows(implicit = @OAuthFlow(authorizationUrl = "{{authorizationUrl}}", tokenUrl = "{{tokenUrl}}", refreshUrl = "{{refreshUrl}}", scopes = { {{#scopes}} @OAuthScope(name = "{{scope}}"){{^-last}},{{/-last}} {{/scopes}} })) {{/isImplicit}}{{#isCode}}
-         flows = @OAuthFlows(authorizationCode = @OAuthFlow(authorizationUrl = "{{authorizationUrl}}", tokenUrl = "{{tokenUrl}}", refreshUrl = "{{refreshUrl}}", scopes = { {{#scopes}} @OAuthScope(name = "{{scope}}"){{^-last}},{{/-last}} {{/scopes}} })) {{/isCode}}{{#isPassword}}
-         flows = @OAuthFlows(password = @OAuthFlow(authorizationUrl = "{{authorizationUrl}}", tokenUrl = "{{tokenUrl}}", refreshUrl = "{{refreshUrl}}", scopes = { {{#scopes}} @OAuthScope(name = "{{scope}}"){{^-last}},{{/-last}} {{/scopes}} })) {{/isPassword}}{{#isApplication}}
-         flows = @OAuthFlows(clientCredentials = @OAuthFlow(authorizationUrl = "{{authorizationUrl}}", tokenUrl = "{{tokenUrl}}", refreshUrl = "{{refreshUrl}}", scopes = { {{#scopes}} @OAuthScope(name = "{{scope}}"){{^-last}},{{/-last}} {{/scopes}} })){{/isApplication}}
-    ){{^-last}},{{/-last}}{{/isOAuth}}{{#isApiKey}}
-    @SecurityScheme(securitySchemeName = "{{name}}", type = SecuritySchemeType.APIKEY,
+         flows = @OAuthFlows(implicit = @OAuthFlow(authorizationUrl = "{{authorizationUrl}}",
+            tokenUrl = "{{tokenUrl}}",
+            refreshUrl = "{{refreshUrl}}",
+            scopes = {
+                {{#scopes}}@OAuthScope(name = "{{scope}}", description = "{{description}}"){{^-last}},{{/-last}}
+                {{/scopes}} })) {{/isImplicit}}{{#isCode}}
+         flows = @OAuthFlows(authorizationCode = @OAuthFlow(authorizationUrl = "{{authorizationUrl}}",
+            tokenUrl = "{{tokenUrl}}",
+            refreshUrl = "{{refreshUrl}}",
+            scopes = {
+                {{#scopes}}@OAuthScope(name = "{{scope}}", description = "{{description}}"){{^-last}},{{/-last}}
+                {{/scopes}} })) {{/isCode}}{{#isPassword}}
+         flows = @OAuthFlows(password = @OAuthFlow(authorizationUrl = "{{authorizationUrl}}",
+            tokenUrl = "{{tokenUrl}}",
+            refreshUrl = "{{refreshUrl}}",
+            scopes = {
+                {{#scopes}}@OAuthScope(name = "{{scope}}", description = "{{description}}"){{^-last}},{{/-last}}
+                {{/scopes}} })) {{/isPassword}}{{#isApplication}}
+         flows = @OAuthFlows(clientCredentials = @OAuthFlow(authorizationUrl = "{{authorizationUrl}}",
+            tokenUrl = "{{tokenUrl}}",
+            refreshUrl = "{{refreshUrl}}",
+            scopes = {
+                {{#scopes}}@OAuthScope(name = "{{scope}}", description = "{{description}}"){{^-last}},{{/-last}}
+                {{/scopes}} })){{/isApplication}}
+    ){{^-last}}, {{/-last}}{{/isOAuth}}{{#isApiKey}}@SecurityScheme(securitySchemeName = "{{name}}", type = SecuritySchemeType.APIKEY,
          description = "{{description}}",
          apiKeyName = "{{keyParamName}}",
          {{#isKeyInHeader}}in = SecuritySchemeIn.HEADER{{/isKeyInHeader}}{{#isKeyInQuery}}in = SecuritySchemeIn.QUERY{{/isKeyInQuery}}{{#isKeyInCookie}}in = SecuritySchemeIn.COOKIE{{/isKeyInCookie}}
-    ){{^-last}},{{/-last}}{{/isApiKey}}{{#isBasicBasic}}
-    @SecurityScheme(securitySchemeName = "{{name}}", type = SecuritySchemeType.HTTP,
+    ){{^-last}}, {{/-last}}{{/isApiKey}}{{#isBasicBasic}}@SecurityScheme(securitySchemeName = "{{name}}", type = SecuritySchemeType.HTTP,
          description = "{{description}}",
          scheme = "basic"
-    ){{^-last}},{{/-last}}{{/isBasicBasic}}{{#isBasicBearer}}
-    @SecurityScheme(securitySchemeName = "{{name}}", type = SecuritySchemeType.HTTP,
+    ){{^-last}}, {{/-last}}{{/isBasicBasic}}{{#isBasicBearer}}@SecurityScheme(securitySchemeName = "{{name}}", type = SecuritySchemeType.HTTP,
         description = "{{description}}",
         scheme = "bearer", bearerFormat = "{{bearerFormat}}"
-    ){{^-last}},{{/-last}}{{/isBasicBearer}}{{#isOpenId}}
-    @SecurityScheme(securitySchemeName = "{{name}}", type = SecuritySchemeType.OPENIDCONNECT,
+    ){{^-last}}, {{/-last}}{{/isBasicBearer}}{{#isOpenId}}@SecurityScheme(securitySchemeName = "{{name}}", type = SecuritySchemeType.OPENIDCONNECT,
         description = "{{description}}",
         openIdConnectUrl = "{{openIdConnectUrl}}"
-    ){{^-last}},{{/-last}}{{/isOpenId}}{{/authMethods}}
+    ){{^-last}}, {{/-last}}{{/isOpenId}}{{/authMethods}}
 }){{/hasAuthMethods}}{{/useMicroProfileOpenAPIAnnotations}}{{#useSwaggerAnnotations}}
 @Api(description = "the {{{baseName}}} API"){{/useSwaggerAnnotations}}
 @Path("{{commonPath}}"){{#hasConsumes}}
