Issue #795: Add microprofile OpenAPI annotations for quarkus library in JaxRsSpec

--- a/modules/openapi-generator/src/main/resources/JavaJaxRS/spec/libraries/quarkus/api.mustache
+++ b/modules/openapi-generator/src/main/resources/JavaJaxRS/spec/libraries/quarkus/api.mustache
@@ -15,6 +15,7 @@ import org.eclipse.microprofile.openapi.annotations.responses.*;
 import org.eclipse.microprofile.openapi.annotations.media.*;
 import org.eclipse.microprofile.openapi.annotations.enums.*;
 import org.eclipse.microprofile.openapi.annotations.headers.*;
+import org.eclipse.microprofile.openapi.annotations.parameters.*;
 {{/useMicroProfileOpenAPIAnnotations}}
 
 {{#useGzipFeature}}
