--- a/modules/openapi-generator/src/main/resources/dart/libraries/dio/pubspec.mustache
+++ b/modules/openapi-generator/src/main/resources/dart/libraries/dio/pubspec.mustache
@@ -4,7 +4,7 @@ description: {{pubDescription}}
 homepage: {{pubHomepage}}
 
 environment:
-  sdk: '>=2.17.0 <3.0.0'
+  sdk: '>={{#useJsonSerializable}}2.17.0{{/useJsonSerializable}}{{^useJsonSerializable}}2.15.0{{/useJsonSerializable}} <3.0.0'
 
 dependencies:
   dio: '^5.0.0'
