Issue #795: Add microprofile OpenAPI annotations for quarkus library in JaxRsSpec

--- a/modules/openapi-generator/src/main/resources/JavaJaxRS/spec/RestApplication.mustache
+++ b/modules/openapi-generator/src/main/resources/JavaJaxRS/spec/RestApplication.mustache
@@ -3,6 +3,12 @@ package {{invokerPackage}};
 import {{javaxPackage}}.ws.rs.ApplicationPath;
 import {{javaxPackage}}.ws.rs.core.Application;
 
+{{#useMicroProfileOpenAPIAnnotations}}{{#openAPI}}{{#info}}@org.eclipse.microprofile.openapi.annotations.OpenAPIDefinition(
+    info = @org.eclipse.microprofile.openapi.annotations.info.Info(
+        title = "{{{title}}}", version="{{{version}}}", description="{{{description}}}"
+        {{#license}},license = @org.eclipse.microprofile.openapi.annotations.info.License(name = "{{{name}}}", url = "{{{url}}}"){{/license}}
+        {{#contact}},contact = @org.eclipse.microprofile.openapi.annotations.info.Contact(name = "{{{name}}}", email = "{{{email}}}"){{/contact}}
+)){{/info}}{{/openAPI}}{{/useMicroProfileOpenAPIAnnotations}}
 @ApplicationPath(RestResourceRoot.APPLICATION_PATH)
 public class RestApplication extends Application {
 
