fix: returning raw http entity to the client as a hot fix for apiInvoker

--- a/modules/openapi-generator/src/main/resources/scala-akka-client/apiInvoker.mustache
+++ b/modules/openapi-generator/src/main/resources/scala-akka-client/apiInvoker.mustache
@@ -258,11 +258,11 @@ class ApiInvoker(formats: Formats)(implicit system: ActorSystem) extends CustomC
         Unmarshal(response.entity)
           .to[T]
           .recoverWith {
-            case e => throw ApiError(response.status.intValue, s"Unable to unmarshall content to [$manifest]", Some(response.entity.toString), e)
+            case e => throw ApiError(response.status.intValue, s"Unable to unmarshall content to [$manifest]", Some(response.entity), e)
           }
           .map(value => responseForState(state, value))
       case None | Some(_) =>
-        Future.failed(ApiError(response.status.intValue, "Unexpected response code", Some(response.entity.toString)))
+        Future.failed(ApiError(response.status.intValue, "Unexpected response code", Some(response.entity)))
     }
   }
 }
