--- a/modules/openapi-generator/src/main/resources/dart/libraries/dio/serialization/built_value/repository_impl.mustache
+++ b/modules/openapi-generator/src/main/resources/dart/libraries/dio/serialization/built_value/repository_impl.mustache
@@ -1,10 +1,46 @@
 {{>header}}
+
 import 'dart:convert';
 import 'dart:typed_data';
 
 import 'package:built_collection/built_collection.dart';
 import 'package:built_value/serializer.dart';
 import 'package:dio/dio.dart';
+import 'repository_base.dart';
+import 'serializers.dart';
+
+class BuiltValueJsonRepository extends SerializationRepositoryBase {
+    final Serializers serializers;
+    const BuiltValueJsonRepository(this.serializers);
+
+    @override
+    T deserialize<T>(Object value, TypeInfo parsedType, {Object? context}) {
+        
+    }
+
+    @override
+    Object encodeFormParameter<T>(T src, TypeInfo parsedType, {Object? context}) {
+    
+    }
+
+    @override
+    Object encodeQueryParameter<T>(T src, TypeInfo parsedType,
+        {Object? context}) {   
+    }
+
+    @override
+    String encodeStringParameter<T>(T src, TypeInfo parsedType,
+        {Object? context}) {        
+    }
+
+    @override
+    Object serialize<T>(T src, TypeInfo parsedType, {Object? context}) {
+
+    }
+}
+
+/*
+old api_util.dart for reference
 
 /// Format the given form parameter object into something that Dio can handle.
 /// Returns primitive or String.
@@ -72,3 +108,5 @@ ListParam<Object?> encodeCollectionQueryParameter<T>(
   }
   throw ArgumentError('Invalid value passed to encodeCollectionQueryParameter');
 }
+
+*/
