--- a/modules/openapi-generator/src/main/resources/typescript-axios/index.mustache
+++ b/modules/openapi-generator/src/main/resources/typescript-axios/index.mustache
@@ -2,6 +2,6 @@
 /* eslint-disable */
 {{>licenseInfo}}
 
-export * from "./api";
-export * from "./configuration";
+export * from "./api.js";
+export * from "./configuration.js";
 {{#withSeparateModelsAndApi}}export * from "./{{tsModelPackage}}";{{/withSeparateModelsAndApi}}
