completely decouple the networking and serialization mustache files into separate directories WIP serialization repo implmentation

--- a/modules/openapi-generator/src/main/resources/dart/lib.mustache
+++ b/modules/openapi-generator/src/main/resources/dart/lib.mustache
@@ -1,5 +1,5 @@
 {{>header}}
 
-export 'api.dart';
+export 'apis.dart';
 export 'models.dart';
 export 'package:{{pubName}}/{{sourceFolder}}/auth/_exports.dart';
