--- a/modules/openapi-generator/src/main/resources/dart/libraries/dio/api.mustache
+++ b/modules/openapi-generator/src/main/resources/dart/libraries/dio/api.mustache
@@ -7,7 +7,7 @@ import 'package:{{pubName}}/models.dart';
 {{#imports}}import '{{.}}';
 {{/imports}}
 
-{{>api_typed}}
-{{>api_raw}}
+{{>libraries/dio/api_typed}}
+{{>libraries/dio/api_raw}}
 
 {{/operations}}
