--- a/modules/openapi-generator/src/main/resources/dart/libraries/http/model_test.mustache
+++ b/modules/openapi-generator/src/main/resources/dart/libraries/http/model_test.mustache
@@ -1,16 +1,16 @@
+{{>header}}
 {{#models}}
 {{#model}}
+import 'package:{{{pubName}}}/api.dart';
 import 'package:test/test.dart';
-import 'package:{{pubName}}/{{pubName}}.dart';
 
 // tests for {{{classname}}}
 void main() {
   {{^isEnum}}
-  {{! Due to required vars without default value we can not create a full instance here }}
-{{#includeLibraryTemplate}}test_instance{{/includeLibraryTemplate}}
+  // final instance = {{{classname}}}();
   {{/isEnum}}
 
-  group({{{classname}}}, () {
+  group('test {{{classname}}}', () {
     {{#vars}}
     {{#description}}
     // {{{.}}}
@@ -21,7 +21,9 @@ void main() {
     });
 
     {{/vars}}
+
   });
+
 }
 {{/model}}
 {{/models}}
