--- a/modules/openapi-generator/src/main/resources/dart/object_doc.mustache
+++ b/modules/openapi-generator/src/main/resources/dart/object_doc.mustache
@@ -2,7 +2,7 @@
 
 ## Load the model package
 ```dart
-import 'package:{{pubName}}/api.dart';
+import 'package:{{pubName}}/{{pubName}}.dart';
 ```
 
 ## Properties
