--- a/modules/openapi-generator/src/main/resources/dart/libraries/dio/api_client.mustache
+++ b/modules/openapi-generator/src/main/resources/dart/libraries/dio/api_client.mustache
@@ -2,7 +2,7 @@
 import 'package:dio/dio.dart';
 import 'repository_base.dart';
 import 'repository_impl.dart';
-import 'package:{{pubName}}/api.dart';
+import 'package:{{pubName}}/apis.dart';
 import 'package:{{pubName}}/models.dart';
 import 'package:{{pubName}}/{{sourceFolder}}/auth/_exports.dart';
 
@@ -23,7 +23,7 @@ class {{clientName}} {
               baseUrl: basePathOverride ?? basePath,
               connectTimeout: const Duration(milliseconds: 5000),
               receiveTimeout: const Duration(milliseconds: 3000),
-            )), this.serializationRepository = serializationRepositoryOverride ?? {{#includeLibraryTemplate}}repository_construction{{/includeLibraryTemplate}} {
+            )), this.serializationRepository = serializationRepositoryOverride ?? {{#includeSerializationTemplate}}repository_construction{{/includeSerializationTemplate}} {
     if (interceptors == null) {
       this.dio.interceptors.addAll([
         OAuthInterceptor(),
